--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Altcademy: Stock Portfolio Example</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <title>To Do List</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link href="style.css" rel="stylesheet" type="text/css" />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
+
   <body>
     <h1>To Do list</h1>
 
@@ -23,9 +23,9 @@
       </div>
 
       <div id="todolist">
-        <div id="taskdone" class="form-check"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></div>
-        <div id="task" class="task"><span class="mark-complete-button"></span><p class="task-content">groceries</p></div>
-        <div id="taskremover"><button type="button" class="btn btn-outline-light btn-xs">Remove</button></div>
+        <!-- <div id="taskdone" class="form-check"><input class="form-check-input" type="checkbox" value="" id="flexCheckDefault"></div> -->
+        <!-- <div id="task" class="task"><span class="mark-complete-button"></span><p class="task-content">groceries</p></div> -->
+        <!-- <div id="taskremover"><button type="button" class="btn btn-outline-light btn-xs">Remove</button></div> -->
       </div>
           <!-- ------------------------------------------- -->
 
@@ -57,8 +57,6 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   </body>
 </html>
