--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <div class="container col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
       
       <div id="todolistadder">
-        <div><input id="taskinput" class="form-control" placeholder="What needs to be done?" autocomplete="off">
+        <div><input id="new-task-content" class="form-control" placeholder="What needs to be done?" autocomplete="off" required>
         </div>
+        <div>
+        <button id="createbutton" type="button" class="btn btn-outline-secondary">Create</button></div>
         <div>
         <button id="markbutton" type="button" class="btn btn-outline-secondary">Mark All</button></div>
       </div>
